// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`postcss-themes add the prefix selector to all subselectors 1`] = `
":root{ --color-main: #ccc; --color-highlight: red }
body.dark{ --color-main: #000; --color-highlight: blue }
body.light{ --color-main: #FFF; --color-highlight: green }
a, span{ color: var(--color-main) }"
`;

exports[`postcss-themes gather several declaration in a unique rule 1`] = `
":root{ --color-main: #ccc; --color-highlight: red; }
body.dark{ --color-main: #000; --color-highlight: blue; }
body.light{ --color-main: #FFF; --color-highlight: green; }
a{ color: var(--color-main); background: var(--color-highlight); }"
`;

exports[`postcss-themes replaces multiple rules in the same declaration 1`] = `
":root{ --color-main: #ccc; --color-highlight: red }
body.dark{ --color-main: #000; --color-highlight: blue }
body.light{ --color-main: #FFF; --color-highlight: green }
a{ background: linear-gradient( -45deg, var(--color-main) 50%, var(--color-highlight) 50% ) }"
`;

exports[`postcss-themes replaces the default color and generate theme colors 1`] = `
":root{ --color-main: #ccc; --color-highlight: red }
body.dark{ --color-main: #000; --color-highlight: blue }
body.light{ --color-main: #FFF; --color-highlight: green }
a{ color: var(--color-main) }"
`;
